# translation-service-example

./: .gitignore  Makefile  README.md  config.json  pyproject.toml  translation_service_example.proto
translation_service_example/: client.py  config.py  models.py  server.py
